--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1,144 +1,202 @@
 {
-    "login": {
-      "title": "Chào mừng quay lại",
-      "username": "Tên người dùng",
-      "password": "Mật khẩu",
-      "submit": "Đăng nhập",
-      "loading": "Đang đăng nhập...",
-      "error": "Tên người dùng hoặc mật khẩu không chính xác"
-    },
-    "menu": {
-      "overview": "Tổng quan",
-      "house": "Nhà",
-      "orders": "Đơn hàng",
-      "analysis": "Phân tích",
-      "management": "Quản lý",
-      "setting": "Cài đặt",
-      "calendar": "Lịch",
-      "farm": "Trang trại",
-      "feedUsage": "Đặt hàng và sử dụng thức ăn",
-      "liveWeight": "Cân nặng sống của gia cầm",
-      "climate": "Khí hậu",
-      "demand": "Nhu cầu",
-      "settingOrders": "Cài đặt đơn hàng",
-      "confirmOrders": "Xác nhận đơn hàng",
-      "climateHistory": "Lịch sử khí hậu",
-      "reports": "Báo cáo",
-      "compareData": "So sánh dữ liệu",
-      "manageFarm": "Quản lý trang trại",
-      "manageDevice": "Quản lý thiết bị",
-      "upload": "Tải lên",
-      "download": "Tài xuong",
-      "notification": "Thông báo",
-      "member": "Thành viên",
-      "events": "Sự kiện"
-    },
-    "sidebar": {
-      "selectFarmAndCrop": "Chọn trang trại & vụ mùa",
-      "selectFarm": "Chọn trang trại...",
-      "selectCrop": "Chọn vụ mùa...",
-      "menu": "Menu"
-    },
-    "management": {
-      "title": "Quản lý",
-      "manageFarm": "Quản lý trang trại",
-      "manageHouse": "Quản lý nhà",
-      "tabSettingProduction": "Cài đặt sản xuất"
-    },
-    "upload": {
-      "title": "Tải lên",
-      "tabBreed": "Tiêu chuẩn giống",
-      "tabFeed": "Lập kế hoạch thức ăn"
-    },
-    "breed": {
-      "title": "Tiêu chuẩn giống",
-      "selectBreed": "Chọn giống",
-      "uploadFile": "Tải lên tệp",
-      "noData": "Không có dữ liệu",
-      "table": {
-        "day": "Ngày",
-        "percentLive": "% Sống",
-        "dailyIntake": "Lượng tiêu thụ hàng ngày",
-        "cumIntake": "Lượng tiêu thụ tích lũy",
-        "bodyWeight": "Cân nặng cơ thể",
-        "dailyGain": "Tăng trưởng hàng ngày",
-        "fcr": "FCR"
-      }
-    },
-    "feedPlan": {
-      "title": "Lập kế hoạch thức ăn",
-      "selectBreed": "Chọn kế hoạch",
-      "uploadFile": "Tải lên tệp",
-      "noData": "Không có dữ liệu",
-      "table": {
-        "day": "Ngày",
-        "formular1": "Công thức Silo 1",
-        "formular2": "Công thức Silo 2",
-        "density": "Mật độ",
-        "percentbag": "% Túi"
-      }
-    },
-    "settingProduction": {
-      "title": "Tổng quan sản xuất",
-      "manageProduction": "Quản lý sản xuất",
-      "startCrop": "Bắt đầu vụ mùa",
-      "Confirm_production_start": "Xác nhận bắt đầu sản xuất",
-      "pauseCrop": "Tạm dừng vụ mùa",
-      "continueCrop": "Tiếp tục",
-      "endCrop": "Kết thúc vụ mùa",
-      "confirm_title": "Bạn có chắc không?",
-      "confirmPauseText": "Bạn muốn tạm dừng vụ mùa này? Bạn có thể tiếp tục sau.",
-      "confirmEndText": "Bạn muốn kết thúc vụ mùa này? Hành động này không thể hoàn tác.",
-      "confirm": "Xác nhận",
-      "cancel": "Hủy",
-      "edit": "Chỉnh sửa",
-      "cancel2": "Hủy",
-      "save_changes": "Lưu thay đổi",
-      "current": {
-        "mainCrop": "Vụ mùa chính",
-        "start": "Bắt đầu vụ mùa",
-        "end": "Kết thúc vụ mùa",
-        "status": {
-          "inProcess": "Đang tiến hành",
-          "completed": "Hoàn thành"
-        }
-      },
-      "historyTitle": "Lịch sử sản xuất",
-      "noHistory": "Không tìm thấy lịch sử sản xuất.",
-      "main_crop_details": "Chi tiết vụ mùa chính",
-      "cropTable": {
-        "house": "Nhà",
-        "flock": "Đàn",
-        "feed_planning": "Lập kế hoạch thức ăn",
-        "breed_standard": "Tiêu chuẩn giống",
-        "start_date": "Ngày bắt đầu",
-        "date_end": "Ngày kết thúc",
-        "age_start": "Tuổi bắt đầu",
-        "unit": "Đơn vị",
-        "focus_catch" : "Sản xuất quan tài",
-        "slaughterhouse_weight": "Cân nặng tại lò mổ",
-        "catching_date": "Ngày bắt"
-      },
-      "select_feed": "Chọn kế hoạch thức ăn",
-      "select_breed": "Chọn giống",
-      "toast": {
-        "startCrop": "Sản xuất bắt đầu",
-        "no_changes_detected" : "Không tìm thấy thay đổi",
-        "startProductionerror": "Lỗi khi bắt đầu sản xuất",
-        "Please_select_the_crop_start_date": "Vui lòng chọn ngày bắt đầu vụ mùa",
-        "continueCrop": "Sản xuất đang tiếp tục",
-        "pauseCrop": "Sản xuất tạm dừng. Bạn có thể tiếp tục sau.",
-        "endCrop": "Sản xuất hoàn thành",
-        "saved": "Lưu thành công!",
-        "paused": "Tạm dừng công!",
-        "errorinrecording": "Loi khi ghi dữ liệu",
-      "an_error_occurred": "An error occurred",
-      "nodata" : "Không có dữ liệu",
-      "nodata_description" : "Không có dữ liệu đăng lưu. Vui lòng thêm dữ liệu.",
-      "max_weight" : "Nhàm cân nặng không đọc quá {{max}} gr",
-      "must_be_greater_than_start" : "Ngày bắt phải lớn hơn ngày bắt đầu!",
-      "must_be_less_than_the_end" : "Ngày bắt phải nhỏ hơn ngày kết thúc!"
-      }
+  "login": {
+    "accountLogin": "Đăng nhập tài khoản",
+    "email_address": "Địa chỉ email",
+    "password": "Mật khẩu",
+    "Login": "Đăng nhập",
+    "remember_me": "Ghi nhớ tôi",
+    "forgot_your_password?": "Bạn quên mật khẩu?",
+    "loading": "Đang đăng nhập...",
+    "learn_more_about_us_at": "Tìm hiểu thêm về chúng tôi tại",
+    "error": "Email hoặc mật khẩu không đúng"
+  },
+  "profile" : {
+    "myProfile": "Hồ sơ của tôi",
+    "changePassword": "Đổi mật khẩu",
+    "setting_profile": "Cài đặt hồ sơ",
+    "logout": "Đăng xuất",
+    "back": "Quay lại",
+    "upload_new_photo" : "Tải ảnh mới lên",
+    "current_password" : "Mật khẩu hiện tại",
+    "new_password" : "Mật khẩu mới",
+    "confirm_password" : "Xâc nhân mật khẻ",
+    "saveChanges" : "Lưu thay đổi"
+  },
+  "menu": {
+    "overview": "Tổng quan",
+    "house": "Nhà",
+    "orders": "Đơn hàng",
+    "analysis": "Phân tích",
+    "management": "Quản lý",
+    "setting": "Cài đặt",
+    "calendar": "Lịch",
+    "farm": "Trang trại",
+    "feedUsage": "Đặt hàng và sử dụng thức ăn",
+    "liveWeight": "Cân nặng sống của gia cầm",
+    "climate": "Khí hậu",
+    "demand": "Nhu cầu",
+    "settingOrders": "Cài đặt đơn hàng",
+    "confirmOrders": "Xác nhận đơn hàng",
+    "climateHistory": "Lịch sử khí hậu",
+    "reports": "Báo cáo",
+    "compareData": "So sánh dữ liệu",
+    "manageFarm": "Quản lý trang trại",
+    "manageDevice": "Quản lý thiết bị",
+    "upload": "Tải lên",
+    "download": "Tài xuong",
+    "notification": "Thông báo",
+    "member": "Thành viên",
+    "events": "Sự kiện"
+  },
+  "sidebar": {
+    "selectFarmAndCrop": "Chọn trang trại & vụ mùa",
+    "selectFarm": "Chọn trang trại...",
+    "selectCrop": "Chọn vụ mùa...",
+    "menu": "Menu"
+  },
+  "management": {
+    "title": "Quản lý",
+    "manageFarm": "Quản lý trang trại",
+    "manageHouse": "Quản lý nhà",
+    "tabSettingProduction": "Cài đặt sản xuất"
+  },
+  "manage_device" : {
+    "title": "Quản lý thịết bị",
+    "Mode": "Chế độ",
+    "Device_ID": "ID thiết bị",
+    "Mfg_Date": "Ngày sản xuất",
+    "Exp_Date": "Ngày hết hạn",
+    "Last_Connect": "Kết nối lần cuối",
+    "Device_Ref": "Tham chiếu thiết bị",
+    "View_Indicator": "Xem chỉ báo",
+    "noDevices_added_yet" : "Chưa có thiết bị nào được thêm"
+  },
+  "upload": {
+    "title": "Tải lên",
+    "tabBreed": "Tiêu chuẩn giống",
+    "tabFeed": "Lập kế hoạch thức ăn"
+  },
+  "breed": {
+    "title": "Tiêu chuẩn giống",
+    "selectBreed": "Chọn giống",
+    "uploadFile": "Tải lên tệp",
+    "noData": "Không có dữ liệu",
+    "table": {
+      "day": "Ngày",
+      "percentLive": "% Sống",
+      "dailyIntake": "Lượng tiêu thụ hàng ngày",
+      "cumIntake": "Lượng tiêu thụ tích lũy",
+      "bodyWeight": "Cân nặng cơ thể",
+      "dailyGain": "Tăng trưởng hàng ngày",
+      "fcr": "FCR"
     }
+  },
+  "feedPlan": {
+    "title": "Lập kế hoạch thức ăn",
+    "selectBreed": "Chọn kế hoạch",
+    "uploadFile": "Tải lên tệp",
+    "noData": "Không có dữ liệu",
+    "table": {
+      "day": "Ngày",
+      "formular1": "Công thức Silo 1",
+      "formular2": "Công thức Silo 2",
+      "density": "Mật độ",
+      "percentbag": "% Túi"
+    }
+  },
+  "settingProduction": {
+    "title": "Tổng quan sản xuất",
+    "manageProduction": "Quản lý sản xuất",
+    "startCrop": "Bắt đầu vụ mùa",
+    "Confirm_production_start": "Xác nhận bắt đầu sản xuất",
+    "pauseCrop": "Tạm dừng vụ mùa",
+    "continueCrop": "Tiếp tục",
+    "endCrop": "Kết thúc vụ mùa",
+    "confirm_title": "Bạn có chắc không?",
+    "confirmPauseText": "Bạn muốn tạm dừng vụ mùa này? Bạn có thể tiếp tục sau.",
+    "confirmEndText": "Bạn muốn kết thúc vụ mùa này? Hành động này không thể hoàn tác.",
+    "confirm": "Xác nhận",
+    "cancel": "Hủy",
+    "edit": "Chỉnh sửa",
+    "cancel2": "Hủy",
+    "save_changes": "Lưu thay đổi",
+    "current": {
+      "mainCrop": "Vụ mùa chính",
+      "start": "Bắt đầu vụ mùa",
+      "end": "Kết thúc vụ mùa",
+      "status": {
+        "inProcess": "Đang tiến hành",
+        "completed": "Hoàn thành"
+      }
+    },
+    "historyTitle": "Lịch sử sản xuất",
+    "noHistory": "Không tìm thấy lịch sử sản xuất.",
+    "main_crop_details": "Chi tiết vụ mùa chính",
+    "cropTable": {
+      "house": "Nhà",
+      "flock": "Đàn",
+      "feed_planning": "Lập kế hoạch thức ăn",
+      "breed_standard": "Tiêu chuẩn giống",
+      "start_date": "Ngày bắt đầu",
+      "date_end": "Ngày kết thúc",
+      "age_start": "Tuổi bắt đầu",
+      "unit": "Đơn vị",
+      "focus_catch": "Sản xuất quan tài",
+      "slaughterhouse_weight": "Cân nặng tại lò mổ",
+      "catching_date": "Ngày bắt"
+    },
+    "select_feed": "Chọn kế hoạch thức ăn",
+    "select_breed": "Chọn giống",
+    "toast": {
+      "startCrop": "Sản xuất bắt đầu",
+      "no_changes_detected": "Không tìm thấy thay đổi",
+      "startProductionerror": "Lỗi khi bắt đầu sản xuất",
+      "Please_select_the_crop_start_date": "Vui lòng chọn ngày bắt đầu vụ mùa",
+      "continueCrop": "Sản xuất đang tiếp tục",
+      "pauseCrop": "Sản xuất tạm dừng. Bạn có thể tiếp tục sau.",
+      "endCrop": "Sản xuất hoàn thành",
+      "saved": "Lưu thành công!",
+      "paused": "Tạm dừng công!",
+      "errorinrecording": "Loi khi ghi dữ liệu",
+      "an_error_occurred": "An error occurred",
+      "nodata": "Không có dữ liệu",
+      "nodata_description": "Không có dữ liệu đăng lưu. Vui lòng thêm dữ liệu.",
+      "max_weight": "Nhàm cân nặng không đọc quá {{max}} gr",
+      "must_be_greater_than_start": "Ngày bắt phải lớn hơn ngày bắt đầu!",
+      "must_be_less_than_the_end": "Ngày bắt phải nhỏ hơn ngày kết thúc!",
+      "fill_weight" : "Vui lòng nhập trọng lượng lò mổ cho:"
+    }
+  },
+  "setting": {
+    "summaryReport": "Báo cáo tổng hợp",
+    "alarmWarning": "Cảnh báo & Báo động",
+    "messageLanguage": "Ngôn ngữ tin nhắn",
+    "notification": "Thông báo",
+    "language": "Ngôn ngữ",
+    "farmReort": "Báo cáo trang trại",
+    "reportType": "Loại báo cáo",
+    "time": "Thời gian",
+    "type": "Loại",
+    "enable": "Kích hoạt",
+    "delay_time_min": "Thời gian trễ (phút)",
+    "farm_weight_report": "Báo cáo trọng lượng trang trại",
+    "house_weight_report": "Báo cáo trọng lượng nhà",
+    "pen_weight_report": "Báo cáo trọng lượng chuồng",
+    "farm_weight_report_female_male": "Báo cáo trọng lượng trang trại (cái/đực)",
+    "house_weight_report_female_male": "Báo cáo trọng lượng nhà (cái/đực)",
+    "pen_weight_report_female_male": "Báo cáo trọng lượng chuồng (cái/đực)",
+    "farm_silo_report": "Báo cáo silo trang trại",
+    "Today's_farm_weight_report": "Báo cáo trọng lượng trang trại hôm nay",
+    "Today's_house_weight_report": "Báo cáo trọng lượng nhà hôm nay",
+    "Today's_pen_weight_report": "Báo cáo trọng lượng chuồng hôm nay",
+    "warning_message": "Tin nhắn cảnh báo",
+    "warning_when_start_crop": "Cảnh báo khi bắt đầu trồng trọt",
+    "warning_when_calibrate_device": "Cảnh báo khi hiệu chỉnh thiết bị",
+    "warning_when_underweight": "Cảnh báo khi nhẹ cân",
+    "warning_when_it's_time_to_adjust_the_height_of_the_scale": "Cảnh báo khi cần điều chỉnh độ cao của cân",
+    "warning_when_the_slio_is_refilled": "Cảnh báo khi silo được bổ sung",
+    "warning_when_the_slio_is_usage": "Cảnh báo khi silo được sử dụng",
+    "warning_when_the_slio_low_level": "Cảnh báo khi silo mức thấp",
+    "warning_when_the_slio_low_level_repeat": "Cảnh báo khi silo mức thấp (lặp lại)"
   }
-  
+}
